	* src/engine/Group.c: Remove extra events added in r13483.  This
	leaves the REMOVE event as the only changed event.

2006-03-08  Derek Atkins  <derek@ihtfp.com>

	* src/engine/gnc-filepath-utils.c:
	  gstdio.h and g_mkdir are in glib-2.6 -- use old APIs with glib-2.4.

	* lib/libqof/qof/qofevent.[ch]:
	  Fix the definition of QOF_EVENT_BASE; use QOF_EVENT__LAST for tests.

2006-03-08   Christian Stimming <stimming@tuhh.de>

	* src/gnc-module/gnc-module.c, src/backend/file/sixtp-utils.c:
	Replace setenv() by g_setenv for increased cross-platform
	compatibility.

	* src/engine/gnc-filepath-utils.c: Replace mkdir by g_mkdir for
	increased cross-platform compatibility.

	* src/core-utils/gnc-gconf-utils.c,
	src/business/business-gnome/business-urls.c
	src/gnome-utils/dialog-preferences.c
	src/gnome-utils/gnc-currency-edit.c
	src/gnome-utils/gnc-plugin-file-history.c
	src/gnome-utils/gnc-main-window.c
	src/gnome-utils/dialog-reset-warnings.c
	src/gnome-utils/gnc-tree-view.c src/gnome/window-reconcile.c
	src/app-utils/file-utils.c src/app-utils/gnc-ui-util.c : Replace
	index(3) by strchr(3) and rindex(3) by strrchr(3) because the
	latter is more widely available.

2006-03-07  David Hampton  <hampton@employees.org>

	* src/gnome-utils/gnc-splash.c: Use a font size of "smaller" when
	printing to the splash screen. Should solve 104436 except for
	people running with huge system fonts.

	* src/gnome-utils/gnc-tree-view-account.[ch]: Relabel column
	titles from "XXX (Report)" to a label that includes the currency
	mnemonic (e.g. "Total (EUR)"). Closes 118695.

	* src/app-utils/gnc-ui-util.c:
	* src/engine/gnc-hooks.[ch]: Cache the result of a gconf lookup
	for a currency choice.  Add a new callback hook for when a user
	changes a currency setting (default account or report).

	* src/register/register-gnome/combocell-gnome.c:
	* src/register/register-gnome/gnucash-item-list.[ch]:
	* src/register/register-gnome/gnucash-item-edit.[ch]: