@@ -433,8 +433,8 @@ AC_ARG_ENABLE(qof,
 AC_ARG_WITH(qof, [  --with-qof=path           prefix for Query Object Framework - QOF (auto)],
 	[gnc_with_qof=$withval], [gnc_with_qof=yes])
 
-# bug fixes between 0.6.1 and 0.6.2 mean gnucash runs best with 0.6.2
-QOF_REQUIRED=0.6.2
+# bug fixes in QOF mean gnucash runs best with 0.6.3
+QOF_REQUIRED=0.6.3
 if test "$gnc_enable_qof" = true ; then
   AC_MSG_CHECKING([for QOF, version >= $QOF_REQUIRED])
   if test "$gnc_with_qof" != "yes"; then
